# flaskBokehMPT

./: .env.example  .gitignore  CHANGELOG.md  README.md  app.py  output.html  pyproject.toml  render.yaml  requirements.txt  test.py
app/: __init__.py  data_loader.py  plots.py  portfolio_optimizer.py
scripts/: manage.bat  prd.txt  task-complexity-report.json
static/css/: style.css
static/js/: script.js
templates/: .keep  index.html  optimize_input.html
tests/: .keep  test_app.py  test_bokeh_html_output.py  test_data_loader.py  test_plots.py  test_portfolio_optimizer.py
